# SFINAE

./: CMakeLists.txt  README.md
inc/: typeFunctions.h  typeFunctions_a.h  typeFunctions_b.h  typeFunctions_c.h
src/: SFINAE_0.cpp  SFINAE_1.cpp  SFINAE_2.cpp  SFINAE_3.cpp  SFINAE_4.cpp  SFINAE_5.cpp  base.cpp
